// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] with postcodePattern range: 1st page 1`] = `
[
  {
    "date": "2019-03-25",
    "price": 341250,
    "property": {
      "address": "45c7a465a6da7fc33b9d4577cacafa53e849dda6",
    },
  },
  {
    "date": "2019-04-25",
    "price": 375000,
    "property": {
      "address": "dd3c8e0d34ac3fd9dadc294e96ccd1cfa00e599a",
    },
  },
  {
    "date": "2019-04-26",
    "price": 545000,
    "property": {
      "address": "dea9c5dd93a7c61fa0bcebb9ea9f2814846203d1",
    },
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] with postcodePattern range: 2nd page 1`] = `
[
  {
    "date": "2022-09-16",
    "price": 357500,
    "property": {
      "address": "8b7de6d263024ec9713f5279e13aadee8d07f7c8",
    },
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range 1`] = `
[
  {
    "date": "2013-10-23",
    "price": 100000,
  },
  {
    "date": "2013-12-03",
    "price": 130000,
  },
  {
    "date": "2013-12-18",
    "price": 125000,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range: 2nd page 1`] = `
[
  {
    "date": "2015-10-15",
    "price": 765000,
  },
  {
    "date": "2015-10-30",
    "price": 757055,
  },
  {
    "date": "2015-10-30",
    "price": 745000,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] without criteria 1`] = `
[
  {
    "date": "2007-08-22",
    "price": 229400,
  },
  {
    "date": "2013-10-23",
    "price": 100000,
  },
  {
    "date": "2013-12-03",
    "price": 130000,
  },
]
`;
